# bump

./: Cargo.toml  IDEAS.md  README.md  ROADMAP.md  UNRELEASED.md
assets/raw_img/: icon_64.data
src/: main.rs
src/cli/: cli.rs  instance.rs  mod.rs
src/config/: config.rs  mod.rs  msg.rs
src/core/: macros.rs  mod.rs
src/gui/: app.rs  elements.rs  gui.rs  library.rs  mod.rs  playlist.rs  settings.rs  svg_data.rs  theme.rs
src/gui/components/: input.rs  mod.rs  number_input.rs
src/gui/settings/: elements.rs  hotkeys.rs  library.rs  mod.rs  msg.rs  playback.rs  settings.rs
src/gui/widgets/: column.rs  hover_grad.rs  list_view.rs  mod.rs  svg_button.rs  text_ellipsis.rs  toggler.rs
src/hotkeys/: code.rs  hotkey.rs  hotkeys.rs  mod.rs  modifiers.rs
src/player/: mod.rs  msg.rs  player.rs  sinker.rs
src/server/: index.html  server.rs
