[package]
name = "bump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.4.1"
dirs = "5.0.1"
eyre = "0.6.8"
iced = "0.10.0"
iced_core = "0.10.0"
raplay = "0.2.2"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["sync"] }
