[package]
name = "bump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.4.1"
dirs = "5.0.1"
eyre = "0.6.8"
flexi_logger = "0.27.0"
global-hotkey = "0.3.0"
iced = { version = "0.10.0", features = ["svg", "image"] }
iced_core = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
raplay = "0.3.3"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["sync"] }
